2017-08-24 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix inconsistent parsing - x^22x=x^22*x, x^2x=x^(2*x) (now x^2x=x^2*x)
	* Do not round exact integers in EXP_NONE/"Simple" mode (its only annoying)
	
2017-08-23 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Remove duplicate history entries in qalc
	* Fix factorization issues

2017-08-22 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Precision variable

2017-08-20 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix sum(x/x,0,10) and avoid warning for sum(x/x,1,10), and similar
	* Unicode ellipsis
	* Return zero for plot()

2017-08-19 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Enable plotting on Windows (gnuplot must be installed separately)
	* Support middle dot (00B7) as multiplication sign

2017-08-17 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Ability to apply functions with multiple arguments to the rpn stack (including using the whole stack for functions with a vector as argument)
	* Fix clang compilation

2017-08-16 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix compilation on Ubuntu 16.04
	* Move function in fincance to parent category and update description of pmt()

2017-08-14 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Derivatives of inverse and hyberbolic functions
	* Make for() more efficient

2017-08-11 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Enhance gamma(). Add digamma(), arg(), conj(), besselj(), bessely(), airy(), erf(), erfc()

2017-08-10 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix decimal exact fractional format for large numerators and denominators
	* Avoid display of numbers with extremely large number of digits (> 10000000) for all options

2017-08-09 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix trigonometric functions with angle unit other than radian 

2017-08-07 Hanna Knutsson <hanna.knutsson@protonmail.com>
